--- a/Talkative.Web/ClientApp/src/components/NavMenu.css
+++ b/Talkative.Web/ClientApp/src/components/NavMenu.css
@@ -1,9 +1,4 @@
-﻿a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
+﻿/*
 html {
   font-size: 14px;
 }
@@ -16,3 +11,4 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+*/
