--- a/Talkative.Web/ClientApp/src/custom.css
+++ b/Talkative.Web/ClientApp/src/custom.css
@@ -5,3 +5,27 @@
 body {
     overflow: hidden;
 }
+
+.user-list {
+    cursor: pointer;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #4F4F55;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #888;
+}
