Major changes - Backend / UI
UserDevice entity
RoomReadStatus entity
User profile image
Group profile image
Asset cache

--- a/Talkative.Web/ClientApp/src/custom.css
+++ b/Talkative.Web/ClientApp/src/custom.css
@@ -18,6 +18,10 @@
     cursor: pointer;
 }
 
+.c-pointer {
+    cursor: pointer;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -36,4 +40,13 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #888;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+}
+
+.scrollbar-hide {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
 }
